# catkin_lint_cmake

./: CMakeLists.txt  README.md  package.xml  setup.py
cmake/: catkin_lint_cmake-extras.cmake.em
resources/: catkin_lint-junit.xsl
scripts/: catkin_lint_wrapper
src/catkin_lint_cmake/: __init__.py  main.py  output.py
